# ufc-elo-calculator

./: .dockerignore  .env.scraper  .gitignore  .python-version  Dockerfile  Makefile  README.md  alembic.ini  compose.yml  documentation.md  gunicorn_conf.py  pyproject.toml  requirements.top  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.MD  PULL_REQUEST_TEMPLATE.md
.github/workflows/: main.yml  pr-check.yml
elo_calculator/: app.py
elo_calculator/application/: __init__.py  analytics_service.py  base_service.py  bout_service.py  elo_calculator.py  entry_elo_service.py  event_elo_service.py  event_ingestion_service.py  event_service.py  fight_scrape_service.py  maintenance_service.py  pre_ufc_bout_service.py
elo_calculator/application/bouts/: __init__.py  bout_service.py
elo_calculator/application/events/: __init__.py  event_service.py
elo_calculator/application/fighters/: __init__.py  fighter_service.py
elo_calculator/application/leaderboard/: __init__.py  leaderboard_service.py
elo_calculator/application/ranking/: __init__.py  math_utils.py  network_pagerank.py  ps.py  system_a_elo_ps.py  system_b_glicko2_ps.py  system_c_dynamic_factor_bt.py  system_d_stacked_logit.py  system_e_expected_win_rate.py  system_f_unified_elo.py  system_g_goat_analysis.py  system_g_goat_pipeline.py  system_h_ufc5_stats.py  targets.py  types.py  ufc1_walkthrough.py  ufc5_features.py  ufc5_percentiles.py
elo_calculator/application/services/: analytics_service.py  bout_participant_service.py  bout_service.py  cache_maintenance_service.py  domain_services.py  elo_calculator.py  entry_elo_service.py  event_elo_service.py  event_ingestion_service.py  event_service.py  fight_scrape_service.py  fighter_service.py  judge_score_service.py  performance_score.py  promotion_service.py
elo_calculator/configs/: elo_adjust.json  env.py  lifespan.py  log.py
elo_calculator/errors/: __init__.py  app_errors.py  app_exceptions.py
elo_calculator/infrastructure/: artifacts_loader.py
elo_calculator/presentation/: dependencies.py
elo_calculator/utils/: converters.py  date_parser.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: error.tsx  (+4 more)
notebooks/: 00_data_overview.ipynb  10_normalized_fighter_walkthrough.ipynb  20_overview_pipeline_beginner.ipynb  21_system_a_elo_ps_explained.ipynb  22_system_b_glicko2_ps_explained.ipynb  23_system_c_dynamic_factor_explained.ipynb  24_system_d_stacked_logit_explained.ipynb  25_system_e_ewr_explained.ipynb  26_ps_round_explained.ipynb  27_ufc1_systems_simulation.ipynb
olive_template/: app.py
olive_template/application/: base_service.py  client_service.py
olive_template/configs/: env.py
olive_template/presentation/: dependencies.py
olive_template/utils/: date_parser.py
seeder_data/: ranking_runner.py  seed_normalized.py
seeder_data/data/: bout_id_map.csv  fighter_id_map.csv  promotions_full.csv  promotions_with_sports.csv  sport_translation.csv  tapology_events.csv  tapology_fighters.csv  ufcstats_events.csv  ufcstats_events_2025.csv  ufcstats_fight_totals.csv  ufcstats_fighters.csv  ufcstats_fights.csv
seeder_data/normalized_seed/: constants.py  core.py  helpers.py  normalizers.py  step_dimensions.py  step_entities.py  step_ranking.py  step_results.py  step_stats.py
(+190 files in other folders)
