[project]
name = "ufc-elo-calculator"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "alembic (>=1.16.2,<2.0.0)",
    "annotated-types (>=0.7.0,<0.8.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "fastapi[standard] (>=0.115.13,<0.116.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy[asyncio,mypy] (>=2.0.41,<3.0.0)",
    "orjson (>=3.10.18,<4.0.0)",
    "cloudpickle (>=3.1.1,<4.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
]

[tool.poetry.group.dev.dependencies]
coverage = ">=7.9.1,<8.0.0"
mypy = ">=1.16.1,<2.0.0"
pre-commit = ">=4.2.0,<5.0.0"
pytest-asyncio = ">=1.0.0,<2.0.0"
pytest-cov = ">=6.2.1,<7.0.0"
pytest-mock = ">=3.14.1,<4.0.0"
pytest-order = ">=1.3.0,<2.0.0"
pytest = ">=8.4.1,<9.0.0"
ruff = ">=0.12.1,<1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["elo_calculator"]
omit = ["elo_calculator/tests/*"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 120
target-version = 'py313'
exclude = [
    "temp/",
    ".venv",
    "elo_calculator/infrastructure/database/alembic/",
]

[tool.ruff.lint]
select = [
    'E',   # pycodestyle errors
    'F',   # pyflakes
    'B',   # flake8-bugbear
    'I',   # isort
    'C4',  # flake8-comprehensions
    'N',   # pep8-naming
    'UP',  # pyupgrade
    'S',   # flake8-bandit (security)
    'A',   # flake8-builtins
    'COM', # flake8-commas
    'T20', # flake8-print
    'PT',  # flake8-pytest-style
    'RET', # flake8-return
    'SIM', # flake8-simplify
    'ARG', # flake8-unused-arguments
    'ERA', # eradicate (commented out code)
    'PL',  # pylint
    'RUF', # Ruff-specific rules
]
ignore = [
    'E501',   # Line too long (handled by formatter)
    'B008',   # Do not perform function call in argument defaults
    'COM812', # Commas should be on the line after the comma
]

[tool.ruff.lint.isort]
known-third-party = ["alembic", "fastapi", "sqlalchemy"]
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 4

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.format]
quote-style = 'single'
skip-magic-trailing-comma = true


[tool.mypy]
python_version = '3.13'
strict = true
show_error_codes = true
explicit_package_bases = true
namespace_packages = true
files = ["elo_calculator"]
exclude = ["elo_calculator/infrastructure/database/alembic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-vv",
    "--strict-markers",
    "--strict-config",
    "--cov=elo_calculator",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
